tests/compile-fail/stacked_borrows/illegal_read5.stderr
error: Undefined Behavior: attempting a read access using <BORROW_IDX> at ALLOC[0x8], but that tag does not exist in the borrow stack for this location
  --> $DIR/illegal_read5.rs:LL:CC
   |
LL |     let _val = *xref; // the mutable one is dead and gone
   |                ^^^^^
   |                |
   |                attempting a read access using <BORROW_IDX> at ALLOC[0x8], but that tag does not exist in the borrow stack for this location
   |                this error occurs as part of an access at ALLOC[0x8..0xc]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <BORROW_IDX> was created by a retag at offsets [0x8..0x14]
  --> $DIR/illegal_read5.rs:LL:CC
   |
LL |     let xref: &mut i32 = &mut *refmut;
   |                          ^^^^^^^^^^^^
help: <BORROW_IDX> was later invalidated at offsets [0x0..0x10]
  --> $DIR/illegal_read5.rs:LL:CC
   |
LL |     mem::forget(unsafe { ptr::read(xshr) }); // but after reading through the shared ref
   |                          ^^^^^^^^^^^^^^^
   = note: inside `main` at $DIR/illegal_read5.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

